# DRAMMarkovChain

./: CMakeLists.txt  README.md
config/: test.ini
src/: common.cc  common.h  configuration.cc  configuration.h  dram.cc  dram.h  main.cc
